tests/typeck/valid/returns.vit
space tests/typeck/valid/returns

proc answer() -> int {
  give 42;
}

proc main() -> int {
  give answer();
}
