tests/typeck/invalid/return_mismatch.vit
space tests/typeck/invalid/return_mismatch

proc answer() -> int {
  give "oops";
}
